--- a/main.tex
+++ b/main.tex
@@ -120,7 +120,14 @@
         \textbf{Courses:} Discrete Mathematics, Data Structures \& Algorithms\newline
         \textbf{Societies:} Coding Club
     }
+    \eduitem{Vidya Mandir Senior Secondary School, Chennai}{Jun 2017 -- Jun 2018}{Grade 12}{94.4 \%}{
+        \textbf{Group:} Computer Science \newline
+    }
 \end{cvitemize}
+\section*{Skills}
+\textbf{Programming Languages:} Python, C, C++, Java, R, \LaTeX, MASM, GNU Octave\newline
+\textbf{Web Development:} HTML5, CSS3, JavaScript \newline
+\textbf{Software \& Tools:} Git, TensorFlow, Keras, PyTorch, scikit, NLTK, spaCy, OpenCV
 
 \section*{Experience}
 \begin{cvitemize}
@@ -154,12 +161,6 @@
         Detection of objects using YOLO V3 Algorithm on a custom dataset.
     }
 \end{cvitemize}
-
-\section*{Skills}
-\textbf{Programming Languages:} Python, C, C++, R, \LaTeX, MASM, GNU Octave\newline
-\textbf{Web Development:} HTML5, CSS3, JavaScript \newline
-\textbf{Software \& Tools:} Git, TensorFlow, Keras, PyTorch, scikit, NLTK, spaCy, OpenCV \newline
-\textbf{Human Languages:} English, Tamil, Sanskrit, Hindi
 
 \newpage
 \section*{Awards \& Honours}
